--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
       <section class="place bg-color-1">
         <div class=" relative container mx-auto px-4 py-4">
           <div class="row">
-            <div class="w-full px-4 flex flex-wrap items-center justify-center gap-3 sm:gap-8">
-              <h3 class=" font-bold text-xl">We are hiring!</h3>
-              <a href="#" class=" text-base text-gray-700">Learn more <span><i class="fa-solid fa-caret-right"></i></span></a>
+            <div class="w-full px-16 flex flex-wrap items-center justify-center gap-3 sm:gap-0">
+              <h3 class=" px-4 font-bold text-xl">We are hiring!</h3>
+              <a href="#" class=" px-4 text-base text-gray-900">Learn more <span><i class="fa-solid fa-caret-right"></i></span></a>
             </div>
             <span class="cross absolute top-1/3 right-4 cursor-pointer"><i class="fa-solid fa-xl fa-square-xmark"></i></span>
           </div>
@@ -32,16 +32,16 @@
               <a href="#"><img src="../image/Logo1.png" alt="Logo" class=" w-44"></a>
             </div>
             <div class="w-4/12 px-4">
-              <ul class=" nav-bar a::before hidden md:flex flex-wrap items-center justify-between">
-                <li class=" py-3"><a href="#" class=" relative">About</a></li>
-                <li class=" py-3"><a href="#" class=" relative">Pricing</a></li>
-                <li class=" py-3"><a href="#" class=" relative">Features</a></li>
-                <li class=" py-3"><a href="#" class=" relative">Blog</a></li>
+              <ul class=" nav-bar hidden md:flex flex-wrap items-center justify-between">
+                <li class=" py-3"><a href="#" class=" relative text-black hover:text-logic-pest">About</a></li>
+                <li class=" py-3"><a href="#" class=" relative text-black hover:text-logic-pest">Pricing</a></li>
+                <li class=" py-3"><a href="#" class=" relative text-black hover:text-logic-pest">Features</a></li>
+                <li class=" py-3"><a href="#" class=" relative text-black hover:text-logic-pest">Blog</a></li>
               </ul>
             </div>
             <div class="w-4/12 px-4">
               <ul class=" hidden md:flex flex-wrap items-center justify-end gap-4">
-                <li><a href="#" class=" px-4 py-3">Login</a></li>
+                <li><a href="#" class=" px-4 py-3 text-black hover:text-logic-pest">Login</a></li>
                 <li><a href="#" class=" px-6 py-3 btn-col-1  transition ease-in-out duration-300 rounded-md text-white">Get Started</a></li>
               </ul>
             </div>
@@ -70,7 +70,7 @@
           <div class="row items-center">
             <div class=" w-full md:w-6/12 px-4 space-y-4 md:space-y-6">
               <p class=" text-gradient font-bold text-base sm:text-lg md:text-xl tracking-widest">CUSTOMER SERVICE</p>
-              <h2 class=" font-bold text-lg md:text-2xl lg:text-4xl">Take your customer experience to the next level</h2>
+              <h2 class=" font-bold text-lg md:text-2xl lg:text-4xl">Take your customer</br> experience to the next level</h2>
               <p class=" text-base text-gray-700 pb-8 lg:pb-0 pr-8 md:pr-0">We are dedicated to helping businesses improve the experience they provide for their customers.</p>
             </div>
             <div class=" w-full md:w-6/12 px-4">
