--- a/public/index.html
+++ b/public/index.html
@@ -7,26 +7,27 @@
     <title>Logic Line</title>
     <link rel="stylesheet" href="./tailwind.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+    <link rel="stylesheet" type="text/css" href="../src/slick.css">
+    <link rel="stylesheet" type="text/css" href="../src/slick-theme.css">
 </head>
-<body>
+<body class=" bg-gray-700">
     <header>
       <!-- ===================head-1==================== -->
       <section class="place bg-color-1">
-        <div class=" relative container mx-auto px-4 py-4">
+        <div class=" relative container mx-auto px-4 py-2">
           <div class="row">
             <div class="w-full px-16 flex flex-wrap items-center justify-center gap-3 sm:gap-0">
               <h3 class=" px-4 font-bold text-xl">We are hiring!</h3>
               <a href="#" class=" px-4 text-base text-gray-900">Learn more <span><i class="fa-solid fa-caret-right"></i></span></a>
             </div>
-            <span class="cross absolute top-1/3 right-4 cursor-pointer"><i class="fa-solid fa-xl fa-square-xmark"></i></span>
+            <span class="cross absolute top-1/4 right-4 cursor-pointer"><i class="fa-solid fa-xl fa-square-xmark"></i></span>
           </div>
         </div>
       </section>
       <!-- ===================head-1 End==================== -->
       <!-- ================Navbar====================== -->
       <nav class=" bg-color-2">
-        <div class=" relative container mx-auto px-4 py-2">
+        <div class=" relative container mx-auto px-4 py-4">
           <div class="row items-center">
             <div class="w-4/12 px-4 flex items-center justify-start">
               <a href="#"><img src="../image/Logo1.png" alt="Logo" class=" w-44"></a>
@@ -242,12 +243,12 @@
             </div>
             <div class="">
               <ul class=" flex justify-end gap-4">
-                <li class=""><a href="#" class=" px-2 py-2 ease-in duration-300 arrow"><i class="fa fa-2xl fa-arrow-left"></i></a></li>
-                <li class=""><a href="#" class=" px-2 py-2 ease-in duration-300 arrow"><i class="fa fa-2xl fa-arrow-right"></i></a></li>
+                <li class="slick-prev px-2 py-2 ease-in duration-300 arrow cursor-pointer"><i class="fa fa-2xl fa-arrow-left"></i></li>
+                <li class="slick-next px-2 py-2 ease-in duration-300 arrow cursor-pointer"><i class="fa fa-2xl fa-arrow-right"></i></li>
               </ul>
             </div>
           </div>
-          <div class="my-slider w-full">
+          <div class="homeslider w-full">
             <div class=" px-4 max-w-md">
               <div class=" p-4 space-y-8 border border-gray-900">
                 <div class=" flex flex-nowrap">
@@ -705,21 +706,32 @@
 
 
     <script src="../js/index.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="../js/jquery-3.6.3.min.js"></script>
+    <script src="../js/slick.min.js"></script>
     <script>
-      var slider = tns({
-        container: '.my-slider',
-        items: 3,
-        slideBy: 'page',
-        autoplay: true,
-        autoplayButtonOutput: true,
-        controls: true,
-        prevButton: true,
-        nextButton: true,
-        nav: false,
-        mouseDrag: true,
+      $(document).ready(function(){
+        $('.homeslider').slick({
+            infinite: true,
+            slidesToShow: 3,
+            slidesToScroll: 3,
+            responsive: [
+                  {
+                    breakpoint: 768,
+                    settings: {
+                      slidesToShow: 2,
+                      slidesToScroll: 2
+                    }
+                  },
+                  {
+                    breakpoint: 550,
+                    settings: {
+                      slidesToShow: 1,
+                      slidesToScroll: 1
+                    }
+                  }
+                ]
+          });
       });
-  </script>
-    
+    </script>
 </body>
 </html>
