--- a/public/contacts.html
+++ b/public/contacts.html
@@ -34,7 +34,7 @@
                 <div class="w-7/12">
                   <ul class=" nav-bar hidden lg:flex flex-wrap items-center justify-between">
                     <li class=" py-3"><a href="./index.html" class=" relative text-black hover:text-logic-pest">Home</a></li>
-                    <li class=" py-3"><a href="#" class=" relative text-black hover:text-logic-pest">About us</a></li>
+                    <li class=" py-3"><a href="./about.html" class=" relative text-black hover:text-logic-pest">About us</a></li>
                     <li class=" py-3"><a href="#" class=" relative text-black hover:text-logic-pest">Pricing</a></li>
                     <li class=" py-3"><a href="./contacts.html" class=" relative text-logic-pest">Contact us</a></li>
                     <li class=" py-3"><a href="#" class=" relative text-black hover:text-logic-pest">Career</a></li>
@@ -58,7 +58,7 @@
             <div class="mobile-menu hidden lg:hidden relative">
               <ul class=" z-30 absolute top-2 w-full divide-y divide-bg-color-2 list rounded-sm shadow-xl">
                 <li class=""><a href="index.html" class=" relative flex p-4">Home</a></li>
-                <li class=""><a href="#" class=" relative flex p-4">About us</a></li>
+                <li class=""><a href="./about.html" class=" relative flex p-4">About us</a></li>
                 <li class=""><a href="#" class=" relative flex p-4">Pricing</a></li>
                 <li class=""><a href="./contacts.html" class=" relative flex p-4">Contact us</a></li>
                 <li class=""><a href="#" class=" relative flex p-4">Career</a></li>
