--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
       <div class="container max-w-screen-xl mx-auto px-4 py-4">
         <div class="row items-center">
           <div class=" w-full md:w-6/12 px-4 space-y-4 md:space-y-6">
-            <p class=" text-gradient font-bold text-base sm:text-lg md:text-xl tracking-widest">CUSTOMER SERVICE</p>
+            <p class=" pt-8 md:pt-0 text-gradient font-bold text-xs sm:text-base md:text-xl md:tracking-widest">CUSTOMER SERVICE</p>
             <h2 class=" font-bold text-lg md:text-2xl lg:text-4xl">Take your customer</br> experience to the next level</h2>
             <p class=" text-base text-gray-700 pb-8 lg:pb-0 pr-8 md:pr-0">We are dedicated to helping businesses improve the experience they provide for their customers.</p>
           </div>
