--- a/public/contacts.html
+++ b/public/contacts.html
@@ -128,22 +128,22 @@
                         <p class="mt-6 text-gray-700 text-base font-normal">If you would like to find out more about how we can help you, please give us a call or drop us an email. </p>
                         <p class="mt-4 text-gray-700 text-base font-normal"> We welcome your ideas and suggestions about this website and/or any other issues that you wish to raise. </p>
                         <ul class="mt-12">
-                            <li class="flex items-center mt-6">
-                                <a href="javascript:;" class="bg-blue-100 h-12 w-12 text-center rounded-full">
-                                    <svg class="svg-inline--fa fa-phone fa-w-16 font-bold text-2xl mt-3 text-color-1" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="phone" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M493.4 24.6l-104-24c-11.3-2.6-22.9 3.3-27.5 13.9l-48 112c-4.2 9.8-1.4 21.3 6.9 28l60.6 49.6c-36 76.7-98.9 140.5-177.2 177.2l-49.6-60.6c-6.8-8.3-18.2-11.1-28-6.9l-112 48C3.9 366.5-2 378.1.6 389.4l24 104C27.1 504.2 36.7 512 48 512c256.1 0 464-207.5 464-464 0-11.2-7.7-20.9-18.6-23.4z"></path></svg><!-- <i class="fas fa-phone font-bold text-2xl  mt-3 text-blue-700"></i> Font Awesome fontawesome.com -->                                        
+                            <li class="flex items-center mt-8">
+                                <a href="javascript:;" class="bg-blue-100 h-10 w-10 text-center rounded-full">
+                                    <i class="fa-solid fa-phone text-2xl text-color-1 mt-2"></i>                                        
                                 </a>
                                 <p class="ml-4 font-medium text-color-1 -mt-2.5 text-xl">01955-786556</p>
                             </li>
-                            <li class="flex items-center mt-6">
-                                <a href="javascript:;" class="bg-blue-100 h-12 w-12 text-center rounded-full">
-                                    <svg class="svg-inline--fa fa-envelope fa-w-16 font-bold text-2xl mt-3 text-color-1" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="envelope" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"></path></svg><!-- <i class="fas fa-envelope font-bold text-2xl  mt-3 text-blue-700"></i> Font Awesome fontawesome.com -->                                        
+                            <li class="flex items-center mt-8">
+                                <a href="javascript:;" class="bg-blue-100 h-10 w-10 text-center rounded-full">
+                                    <i class="fa-solid text-2xl text-color-1 mt-2 fa-envelope"></i>                                        
                                 </a>
                                 <p class="ml-4 font-medium text-color-1 -mt-2.5 text-xl">contact@logicline.tech</p>
                             </li>
-                            <li class="flex items-center mt-6">
+                            <li class="flex items-center mt-8">
                                 <div>
-                                    <a href="javascript:;" class="bg-blue-100 h-12 w-12 text-center rounded-full inline-block">
-                                        <svg class="svg-inline--fa fa-map-marker-alt fa-w-12 font-bold text-2xl mt-3 text-color-1" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="map-marker-alt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" data-fa-i2svg=""><path fill="currentColor" d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"></path></svg><!-- <i class="fas fa-map-marker-alt font-bold text-2xl mt-3 text-blue-700"></i> Font Awesome fontawesome.com -->                                        
+                                    <a href="javascript:;" class="bg-blue-100 h-10 w-10 text-center rounded-full inline-block">
+                                        <i class="fa-solid text-2xl text-color-1 mt-2 fa-location-dot"></i>                                        
                                     </a>
                                 </div>
                                 <p class="ml-4 font-medium text-color-1 -mt-2.5 text-xl">6th Floor, South Zone Hospital <br> 33 Outer Bypass Rd, Khulna 9100</p>
@@ -193,13 +193,13 @@
               <div class="w-full sm:w-6/12 md:w-3/12 sm:pl-10 lg:pl-20 capitalize  py-4  md:py-0">
                   <h2 class="px-2 text-3xl mb-4 font-semibold">Menu</h2> <!--text-white -->
                   <ul class="px-2 py-2 space-y-2 ">
-                      <li><a class="hover:text-gradient " href="home.html">home</a></li>
+                      <li><a class="hover:text-gradient " href="index.html">home</a></li>
                       <li><a class="hover:text-gradient" href="about.html">about</a></li>
                       <li><a class="hover:text-gradient" href="pricing.html">pricing</a></li>
                       <li><a class="hover:text-gradient" href="features.html">features</a></li>
                       <li><a class="hover:text-gradient" href="blog.html">blog</a></li>
                       <li><a class="hover:text-gradient" href="career.html">career</a></li>
-                      <li><a class="hover:text-gradient" href="contact.html">contact</a></li>
+                      <li><a class="hover:text-gradient" href="contacts.html">contact</a></li>
                   </ul>
               </div>
           <div class="w-full sm:w-6/12 md:w-3/12 capitalize  py-4 md:py-0">
