--- a/public/about.html
+++ b/public/about.html
@@ -325,6 +325,8 @@
     <!-- footer section ends -->
 
     <script src="../js/index.js"></script>
+
+    <!-- Here is some change for testing purpose -->
     
 </body>
 </html>
