changed bg & name fix

--- a/public/about.html
+++ b/public/about.html
@@ -174,7 +174,7 @@
                         <img class=" transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110 mx-auto" src="../image/sohan.jpeg" alt="sohan">
                     </div>
                     <div class="text-center pt-6">
-                        <p class="font-semibold text-xl">Ikbal Mahmmud sohan</p>
+                        <p class="font-semibold text-xl">Ikbal Mahmmud Sohan</p>
                         <p class="">Software Engineer</p>
                     </div>
                 </div>
