--- a/public/careers03.html
+++ b/public/careers03.html
@@ -121,9 +121,9 @@
                 </ul>
             </div>
             <div class=" w-full md:w-4/12">
-              <form action="" class=" sticky top-32 z-40 p-8 w-full space-y-6">
+              <form action="" class=" sticky top-32 z-40 p-8 w-full space-y-4">
                 <a href="mailto:logicline.tech@gmail.com" class=" w-full flex justify-center text-white font-bold py-3 px-4 btn-col-1">Apply for This Job</a>
-                <div class=" w-full border-b border-gray-300"></div>
+                <div class=" pt-2 w-full border-b border-gray-300"></div>
                 <!-- <div>
                   <p class=" text-gray-500">Link to This Job</p>
                   <input type="email" name="email" id="" class=" px-2 py-1 w-full focus:outline-none border border-gray-300 focus-within:border-gray-500">
@@ -133,17 +133,17 @@
                     <a href="" class=" text-color-1 hover:text-gradient text-3xl " ><i class="fa-brands fa-square-facebook"></i></a>
                   </div>
                 </div> -->
-                <div class=" border-b border-gray-300">
+                <div class=" pb-4 border-b border-gray-300">
                   <h3 class=" text-lg text-gray-900">Location</h3>
                   <p class=" text-gray-700">khulna</p>
                 </div>
-                <div class=" border-b border-gray-300">
+                <div class=" pb-4 border-b border-gray-300">
                   <h3 class=" text-lg text-gray-900">Employment Type</h3>
                   <p class=" text-gray-700">Full-Time</p>
                 </div>
-                <div class=" border-b border-gray-300">
+                <div class="">
                   <h3 class=" text-lg text-gray-900">Minimum Experience</h3>
-                  <p class=" text-gray-700">Fresher</p>
+                  <p class=" text-gray-700">At least 1 years of software development experience in Kotlin/Java</p>
                 </div>
               </form>
               
